--- a/Shop_App/app/src/main/res/drawable/button.xml
+++ b/Shop_App/app/src/main/res/drawable/button.xml
@@ -5,7 +5,7 @@
     >
 
     <corners android:radius="10dp"/>
-    <solid android:color="@color/green"/>
+    <solid android:color="@color/grey_one"/>
     <size android:height="50dp"/>
 
 </shape>
