--- a/Shop_App/app/src/main/res/layout/fragment_home.xml
+++ b/Shop_App/app/src/main/res/layout/fragment_home.xml
@@ -8,9 +8,9 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_logo"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/img"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintHorizontal_bias="0.5"
@@ -22,10 +22,10 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/dm_sans_bold"
-        android:text="Shop IT"
+        android:text="Shop"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -38,7 +38,7 @@
         android:layout_height="42dp"
         android:layout_marginStart="24dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/avater"
+        android:src="@drawable/avatar"
         app:layout_constraintBottom_toBottomOf="@+id/imageView4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView4" />
@@ -62,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:fontFamily="@font/dm_sans_bold"
-        android:text="What are you looking for today?"
+        android:text=""
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
