--- a/Shop_App/app/src/main/res/layout/fragment_product_detail.xml
+++ b/Shop_App/app/src/main/res/layout/fragment_product_detail.xml
@@ -45,7 +45,7 @@
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/dm_sans_bold"
                 tools:text="USD 350"
-                android:textColor="@color/green"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/product_detail_image"
                 app:layout_constraintTop_toBottomOf="@+id/product_detail_image" />
@@ -132,7 +132,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/product_detail_image"
                 app:layout_constraintTop_toTopOf="@+id/product_detail_price"
                 app:srcCompat="@drawable/ic_not_favorite"
-                app:tint="@color/green" />
+                app:tint="@color/red" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
