--- a/Shop_App/app/src/main/res/layout/fragment_profile.xml
+++ b/Shop_App/app/src/main/res/layout/fragment_profile.xml
@@ -37,7 +37,7 @@
         android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:srcCompat="@drawable/avater" />
+        app:srcCompat="@drawable/avatar" />
 
     <TextView
         android:id="@+id/profile_name"
