--- a/Shop_App/app/src/main/res/values/colors.xml
+++ b/Shop_App/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="grey">#BABABA</color>
     <color name="grey_light_one">#F3F3F3</color>
     <color name="grey_light_two">#F6F6F6</color>
+    <color name="red">#FF0000</color>
 </resources>
